# dl-pdac-radiomics-global-n-paramaps

./: .dockerignore  .gitignore  CITATION.bib  CITATION.cff  Dockerfile  README.md  main.py  requirements.txt
docs/: HUGGINGFACE_REPRODUCTION.md
docs/huggingface_model_card/: README.md
scripts/: download_checkpoints_from_hf.ps1  prepare_checkpoints.ps1  verify_repository.py
src/: CAM_README.md  PANORAMA_0307.yaml  PANORAMA_voxel.json  __init__.py  compute_volumes.py  data_utils.py  generate_cam.py  generate_cam_from_prepared.py  pipeline.py  process.py  process_local.py  voxel_radiomics.py
src/dynamic-network-architectures_global_rad/dynamic-network-architectures/dynamic_network_architectures/architectures/: unet.py
src/dynamic-network-architectures_global_rad/dynamic-network-architectures/dynamic_network_architectures/building_blocks/: unet_decoder.py
src/nnUNet_results/Dataset001_LR/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json  dataset_fingerprint.json  plans.json
src/nnUNet_results/Dataset002_stage2/nnUNetTrainer_Loss_CE_checkpoints__nnUNetPlans__3d_fullres/: dataset.json  dataset_fingerprint.json  plans.json
src/nnunetv2_global_rad/: GLOBAL_INFO_USAGE.md
src/nnunetv2_global_rad/nnunetv2/inference/: data_iterators.py  predict_from_raw_data.py
src/nnunetv2_global_rad/nnunetv2/training/dataloading/: base_data_loader.py  data_loader_2d.py  data_loader_3d.py  nnunet_dataset.py
src/nnunetv2_global_rad/nnunetv2/utilities/: get_network_from_plans.py
src/pyradiomics-3.1.0-Zengtian/: README.md
src/pyradiomics-3.1.0-Zengtian/examples/exampleSettings/: HHLonly_wavelet.yaml
src/pyradiomics-3.1.0-Zengtian/radiomics/: _version.py  featureextractor.py  imageoperations.py
src/pyradiomics-3.1.0-Zengtian/radiomics/schemas/: paramSchema.yaml
src/pytorchradiomics-main/: requirements-dev.txt
src/report-guided-annotation/: README.md  pyproject.toml  setup.cfg  setup.py
(+2 files in other folders)
