[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "report-guided-annotation"
version = "0.3.2"
description = "Report Guided Annotation"
authors = [
    {name = "Joeran Bosma", email = "Joeran.Bosma@radboudumc.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "tqdm",
    "SimpleITK",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/DIAGNijmegen/Report-Guided-Annotation"
Repository = "https://github.com/DIAGNijmegen/Report-Guided-Annotation"
Issues = "https://github.com/DIAGNijmegen/Report-Guided-Annotation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "--cov=report_guided_annotation"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true