[metadata]
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
report_guided_annotation = py.typed

[flake8]
max-line-length = 160